// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFile > should parse file with default imports correctly 1`] = `
"import type Pets from './Pets.ts'

export type Pet = Pets
"
`;

exports[`createFile > should parse file with exports and aliased exports correctly 1`] = `
"import type Dog from './Dog.ts'
import type { Pets, Lily } from './Pets.ts'

export const test = 2
type Test = Pets | Lily | Dog
"
`;

exports[`createFile > should parse file with exports and aliased exports correctly 2`] = `
"export type * as Dog from './Dog'
export type { Pets, Lily } from './Pets'
"
`;

exports[`createFile > should parse file with type-only imports correctly 1`] = `
"import type { Pets } from './Pets.ts'

export type Pet = Pets
"
`;

exports[`createFile > should parse file with type-only imports correctly 2`] = `
"import client from './Pets.ts'
import React from './React.ts'
import type { Pets, Cat } from './Pets.ts'

export type Pet = Pets | Cat
const test = [client, React]
"
`;

exports[`createFile > should parse file with type-only imports correctly 3`] = `
"import client from './Pets.ts'
import React from './React.ts'
import type { Pets, Cat } from './Pets.ts'

export type Pet = Pets | Cat
const test = [client, React]
"
`;
